testdata/baselines/reference/compiler/expandoContextualTypes.errors.txt
expandoContextualTypes(6,1): error TS1128: Declaration or statement expected.
expandoContextualTypes(6,8): error TS1128: Declaration or statement expected.
expandoContextualTypes(6,31): error TS1128: Declaration or statement expected.

==== expandoContextualTypes (3 errors) ====
    
    // https://github.com/microsoft/typescript-go/issues/921
    
    /// <reference path="/.lib/react16.d.ts" />
    
    import type { ComponentType } from "react";
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~~~~
!!! error TS1128: Declaration or statement expected.
                                  ~~~~
!!! error TS1128: Declaration or statement expected.
    
    export type Page<P = NonNullable<unknown>> = ComponentType<P> & {
        getLayout?: (component: JSX.Element) => JSX.Element;
    }
    
    export const FooPage: Page = () => {
        return (
            <div>
                <p>Foo</p>
            </div>
        )
    };
    
    FooPage.getLayout = () => {
        return <></>
    };
    
